@@ -1,3 +1,5 @@
+    - added textformat block function (Monte)
+
 Version 2.3.0
 -------------
 
